<resources>
    <string name="app_name">Peak Up Me</string>
    <string name="app_maker">App developer</string>
    <string name="copyright_app" translatable="false">Copyright \u00a9 2022, Brain Optimax</string>
    <string name="web_client_id" translatable="false">175191691077-ugjndbtbjvp9joh36aub8d6gn13u9r2b.apps.googleusercontent.com</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_intro_slider_1">Welcome To Peak State Mastery</string>
    <string name="title_intro_slider_2">Mind &amp; Body Sync</string>
    <string name="title_intro_slider_3">Learned Self-Regulation</string>
    <string name="title_intro_slider_4">Self-Mastery</string>
    <string name="description_intro_slider_1">The Peak Me Up app is an integrated suite of science-based tools designed to help get you into a peak state, to excel in any situation</string>
    <string name="description_intro_slider_2">by getting your mind and body into synchronization through the harnessing of the power within,</string>
    <string name="description_intro_slider_3">and controlling your brainwaves and autonomic nervous system (ANS) to enhance resilience, improve executive functions and wellness, among a host of other benefits.</string>
    <string name="description_intro_slider_4">Ultimately, the Peak Me Up App is designed to help you on your journey of self-mastery by developing self-control.</string>
    <string name="description_app">The Peak Me Up app is an integrated suite of science-based tools designed to help get you into a peak state, to excel in any situation by getting your mind and body into synchronization through the harnessing of the power within, and controlling your brainwaves and autonomic nervous system (ANS) to enhance resilience, improve executive functions and wellness, among a host of other benefits. Ultimately, the Peak Me Up App is designed to help you on your journey of self-mastery by developing self-control.</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip >></string>
    <string name="change">Change</string>
    <string-array name="lang_select">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
    <string name="title_intro_emotion_1">Emotion Gauge Benefits</string>
    <string name="title_intro_emotion_2">Happiness Level</string>
    <string name="title_intro_emotion_3">Positive Emotions</string>
    <string name="description_intro_emotion_1">Benefits linked to positive emotions include enhanced health, productivity, creativity, stronger relationships and performing better as leaders. The list goes on.</string>
    <string name="description_intro_emotion_2">Positive psychology researchers suggest that up to 50% of our happiness level is not genetically determined.</string>
    <string name="description_intro_emotion_3">That’s great news as it means that everyone has virtually an equal chance of enhancing positive emotions.</string>
    <string name="title_intro_etq_1">Identify</string>
    <string name="title_intro_etq_2">Apply Immediately</string>
    <string name="title_intro_etq_3">Raise Your Energy</string>
    <string name="description_intro_etq_1">Is the lack of energy or conversely, heightened tension impeding your success? If so, the Energy-Tension quiz can help identify your Energy-Tension profile.</string>
    <string name="description_intro_etq_2">Recommendations include practical tips and strategies you can apply immediately to improve the management of your tension,</string>
    <string name="description_intro_etq_3">and raise your energy level consistently to increase your chances of success.</string>
    <string name="title_intro_psq_1">Are You\nPeak State Ready</string>
    <string name="title_intro_psq_2">Optimal Performance</string>
    <string name="description_intro_psq_1">This quiz measures mindfulness, positive emotion, and resilience - factors evidenced by research to be key determinants</string>
    <string name="description_intro_psq_2">of entering and maintaining a stable state consistent with optimal performance of the mind and body.</string>
    <string name="title_intro_anchor_1">Concept Of Anchoring</string>
    <string name="title_intro_anchor_2">Experience Anchoring</string>
    <string name="title_intro_anchor_3">Experience Anchoring</string>
    <string name="title_intro_anchor_4">Conditioning For Success</string>
    <string name="title_intro_anchor_5">Creating Your Own Outcome</string>
    <string name="title_intro_anchor_6">Benefits of Anchoring</string>
    <string name="title_intro_anchor_7">Anchoring Tips</string>
    <string name="description_intro_anchor_1">The concept of anchoring is based on the established learning principle of classical or Pavlovian conditioning.</string>
    <string name="description_intro_anchor_2">If a particular song brings back a flood of emotions or a certain scent reminds you of a special someone and puts a spring in your step.</string>
    <string name="description_intro_anchor_3">If the recall of a past event, or the performance of an action calms your nerves and sharpens your focus - you have experienced anchoring.</string>
    <string name="description_intro_anchor_4">Anchoring exercises involve the deliberate “conditioning” of a “cue“ with a particular mental-emotional “state” or behavioural response that elicits a positive outcome.</string>
    <string name="description_intro_anchor_5">A cue can be either verbal or non-verbal, i.e., a cue word, a behaviour, or action. Anchoring is an effective means of bringing about specific positive outcomes.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="registernow">Don’t have an account? <u>Register now</u>.</string>
    <string name="loginnow">Have an account? <u>Login now</u>.</string>
    <string name="registDesc">Please Register to your account.</string>
    <string name="loginDesc">Please Login to your account.</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="resetDesc">An email with the reset link will be  sent to you if you have an account</string>
    <string name="send">Send</string>
    <string name="resetPass">Reset Your Password</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="desc_error_auth">Please wait,\nwhile we create your account</string>
    <string name="check_email">Check your email</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="success_logout">Success Logout</string>
    <string name="share">Share</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="desc_update_profile">Are you sure want to Update Profile ?</string>
    <string name="feedback">Feedback</string>
    <string name="account">Account</string>
    <string name="arelogout">Are you sure <b>Logout ?</b></string>
    <string name="exitquiz">End the Quiz ?</string>
    <string name="exitaddgoals">End Add Goal ?</string>
    <string name="msg_exitquiz">Are you sure <b>End the Quiz ?</b></string>
    <string name="msg_exitgoal">Are you sure <b>End add goal ? \n Goals that have been filled will not be saved</b></string>
    <string name="msg_edit_profile">Are you sure to <b>Change Profile ?</b></string>
    <string name="msg_update_email">Are you sure to <b>Change Email ?</b></string>
    <string name="msg_update_password">Are you sure to <b>Change Password ?</b></string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="successlogout">Success Logout</string>
    <string name="change_account">Change Account Information</string>
    <string name="feedbackdesc">Send Feedback Application</string>
    <string name="about">About</string>
    <string name="about_desc">About Application</string>
    <string name="logout_desc">Logout Application</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="doubleback">Please click BACK again to exit</string>
    <string name="loading_register">Please wait,\nwhile we create your account</string>
    <string name="loading_login">Please wait,\nwhile we are connecting to your account</string>
    <string name="welcome">Welcome</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pref_key_theme">pref_key_theme</string>
    <string name="pref_key_accout">pref_key_accout</string>
    <string name="pref_key_peak">pref_key_peak</string>
    <string name="pref_key_energy">pref_key_energy</string>
    <string name="pref_key_share">pref_key_share</string>
    <string name="pref_key_feedback">pref_key_feedback</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_key_logout">pref_key_logout</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_peak_title">Peak State Quiz</string>
    <string name="pref_energy_title">Energy Tension Quiz</string>
    <string name="pref_feedback_title">Feedback</string>
    <string name="pref_about_title">About</string>
    <string name="pref_share_title">Share</string>
    <string name="pref_logout_title">Logout</string>
    <string name="pref_account_summary">Change profile</string>
    <string name="pref_peak_summary">Result Quiz</string>
    <string name="pref_energy_summary">Result Quiz</string>
    <string name="pref_feedback_summary">Send Feedback Application </string>
    <string name="pref_about_summary">About Application </string>
    <string name="pref_share_summary">Share Application</string>
    <string name="pref_logout_summary">Logout Form Application</string>
    <string name="pref_theme_label_auto">System Default</string>
    <string name="pref_theme_label_dark">Dark Mode</string>
    <string name="pref_theme_entry_auto">THEME_AUTOMATIC</string>
    <string name="pref_display_group_title">Display</string>
    <string name="pref_display_group_title_profile">Account</string>
    <string name="pref_display_group_title_application">Application</string>
    <string name="pref_key_lang">pref_key_language</string>
    <string name="english">English</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="intro_desc_breathing">Regular respiration exercise helps to increase HRV for enhanced psychological and physiological performance, raise or lower arousal to match situational demands and increase your threshold for stress</string>
    <string name="let_s_start">LET\'S START</string>
    <string name="take_quizzes">Take Quizzes</string>
    <string name="desc_main_quiz">Quizzes are a self-discovery process to take inventory of your strengths, weaknesses and identify areas that you can work on to unlock your potential.</string>
    <string name="later">LATER</string>
    <string name="energy_tension_quiz">ENERGY TENSION QUIZ</string>
    <string name="peak_state_readiness_quiz">PEAK STATE READINESS QUIZ</string>
    <string name="other">Other</string>
    <string name="send_us_your_feedback">Send us your feedback!</string>
    <string name="desc_feedback">Do you have a suggestion or found some bug? let us know in the feld bellow.</string>
    <string name="how_was_your_experience">How was your experience ?</string>
    <string name="not_bad">Not Bad</string>
    <string name="describe_your_experience_here">Describe your experience here...</string>
    <string name="error" translatable="false">Error</string>
    <string name="bug" translatable="false">Bug</string>
</resources>