<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizActivity"
    android:background="@color/bg_layout">

    <TextView
        android:id="@+id/tv_title_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/take_quizzes"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:id="@+id/iv_icon_quiz"
        android:layout_width="270dp"
        android:layout_height="240dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_quiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_intro_quiz"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon_quiz"
        android:text="@string/desc_main_quiz"
        android:textStyle="normal"
        android:fontFamily="@font/poppins"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_et"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_psr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/energy_tension_quiz"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:backgroundTint="@color/md_orange_A400"/>

    <Button
        android:id="@+id/btn_psr"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_later"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/peak_state_readiness_quiz"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:backgroundTint="@color/dark_tosca"/>

    <Button
        android:id="@+id/btn_later"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/later"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:backgroundTint="@color/md_teal_400"/>

</androidx.constraintlayout.widget.ConstraintLayout>