<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.breathing.IntroBreathingActivity"
    android:background="@color/bg_layout">

    <TextView
        android:id="@+id/tv_intro_breathing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/breathing_exercise"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="50dp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:letterSpacing="0.1"/>

    <ImageView
        android:id="@+id/iv_intro_breathing"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro_breathing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:src="@color/text_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_desc_breathing"
        app:layout_constraintTop_toBottomOf="@+id/iv_intro_breathing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/btn_start_breathing"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/let_s_start"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>